test(backend): update tests to match service and config changes
Update all controller, service, config, and integration tests to
reflect security hardening, service refactoring, and new error codes.
Add ProductionDataPolicy, ProductionProfile, and MlService config tests.